# llvm-patches

./: CMakeLists.txt  README.txt  llvm_prebuilt.cmake  llvm_utils.cmake
releases/10.0.0/patches_internal/: add-release-internal-mode.patch  configure_file-race-fix.patch  enable_compiler_generation_of_cfg_security_check.patch  managed-static-mem-leak-fix.patch
releases/4.0.0/patches_external/: 01-Adds-a-special-field-into-value-class.patch  02-Add-Reassoc-Contract-ApproxFunc-to-FMF.patch  03-completely-turn-off-code-sinking-in-InstructionCombining.patch  04-stripPointerCastsAndOffsets-should-not.patch  05-noduplicate-is-mainly-used-to.patch  06-Be-conservative-when-splitting-loop.patch  07-Temporarily-disable-the-combination-on-b.patch  08-SimplifyCFG-SinkThenElseCodeToEnd-does-not-sink-code.patch  09-Enabling-test-Offset32-Regression-Fix.patch  1-stripPointerCastsAndOffsets-should-not.patch  10-Added-checks-in-SimplifyCFG-GVN-and-Earl.patch  11-Fix-crash-due-to-bad-bitcast.patch  12-universal-driver.patch  13-managed-static-mem-leak-fix.patch  14-unwind-fix.patch  2_1-enable-aggressive-combining.patch  2_2-completely-turn-off-code-sinking-in-InstructionCombining.patch  3_1-SimplifyCFG-SinkThenElseCodeToEnd-does-not-sink-code.patch  3_2-Added-checks-in-SimplifyCFG-GVN-and-Earl.patch  4_1-universal-driver.patch  Add-Reassoc-Contract-ApproxFunc-to-FMF.patch  Be-conservative-when-splitting-loop.patch  Enabling-test-Offset32-Regression-Fix.patch  Fix-crash-due-to-bad-bitcast.patch  Temporarily-disable-the-combination-on-b.patch  add_win_crt_info.patch  noduplicate-is-mainly-used-to.patch  non-recursive-sink-hoist-region.patch
releases/7.0.0/patches_external/: backport-from-upstream-to-fix-issue-with-windows-com.patch  export-utility-to-targets-build-install_1.patch  export-utility-to-targets-build-install_2.patch  fix-pointer-for-lifetime-intrinsic.patch
releases/8.0.0/patches_external/: export-utility-to-targets-build-install.patch
releases/9.0.0/patches_external/: disable-backtrace-on-Android.patch
releases/9.0.0/patches_internal/: remove-llvm-testing-module.patch
